remove placeholders, fix typo

--- a/index.html
+++ b/index.html
@@ -18,36 +18,20 @@
         <div class="calculate-container">
           <form id="calc-form" action="">
             <label for="flour"
-              ><input
-                type="number"
-                name="flour"
-                id="flour"
-                placeholder="900"
-              />Flour (in grams)</label
+              ><input type="number" name="flour" id="flour" />Flour (in
+              grams)</label
             >
             <label for="water"
-              ><input
-                type="number"
-                name="water"
-                id="water"
-                placeholder="680"
-              />Water (in grams)</label
+              ><input type="number" name="water" id="water" />Water (in
+              grams)</label
             >
             <label for="starter"
-              ><input
-                type="number"
-                name="starter"
-                id="starter"
-                placeholder="100"
-              />Starter (in grams)</label
+              ><input type="number" name="starter" id="starter" />Starter (in
+              grams)</label
             >
             <label for="temp"
-              ><input
-                type="number"
-                name="temp"
-                id="temp"
-                placeholder="74"
-              />Temperature (in fareinheit)</label
+              ><input type="number" name="temp" id="temp" />Temperature (in
+              fahrenheit)</label
             ><label for="salt"
               ><input type="checkbox" name="salt" id="salt" />Using salt?
               (standard is 2%)</label
